[gd_scene load_steps=19 format=3 uid="uid://d12inhoielv3c"]

[ext_resource type="Script" uid="uid://c0ahufipk5wfk" path="res://scenes/BossExplosionShader_Ghost.gd" id="1_v8o1f"]
[ext_resource type="Texture2D" uid="uid://dc3b434626601" path="res://sprites/horu/images/light_boss_ghost.png" id="2_7ax61"]
[ext_resource type="Shader" uid="uid://ox0gvagvfpaw" path="res://scenes/boss_explosion_sprite.gdshader" id="2_jeu5y"]
[ext_resource type="Texture2D" uid="uid://cikr25pn1l3fr" path="res://sprites/horu/images/ghost_boss_dead1.png" id="3_y8e0q"]
[ext_resource type="Texture2D" uid="uid://byml36jufg4fw" path="res://sprites/horu/images/ghost_boss1.png" id="5_w5xw1"]
[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="6_b1bnx"]
[ext_resource type="Texture2D" uid="uid://bqivo8fkubm4f" path="res://sprites/horu/images/ghost_boss2.png" id="6_w4o8j"]
[ext_resource type="Texture2D" uid="uid://clsh1xnpq8tn3" path="res://sprites/horu/images/ghost_boss3.png" id="7_572na"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1ad4j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7ax61")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_byki3"]
noise_type = 5
seed = 4545
frequency = 0.1
fractal_lacunarity = 10.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qt8um"]
width = 800
height = 800
generate_mipmaps = false
normalize = false
noise = SubResource("FastNoiseLite_byki3")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5wtc0"]
seed = 885
frequency = 0.1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_p1i0l"]
width = 800
height = 800
generate_mipmaps = false
as_normal_map = true
noise = SubResource("FastNoiseLite_5wtc0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hkrjh"]
shader = ExtResource("2_jeu5y")
shader_parameter/noise_tex_normal = SubResource("NoiseTexture2D_p1i0l")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_qt8um")
shader_parameter/progress = 0.0
shader_parameter/strength = 0.7

[sub_resource type="SpriteFrames" id="SpriteFrames_ir3tq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_y8e0q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_w5xw1")
}, {
"duration": 1.0,
"texture": ExtResource("6_w4o8j")
}, {
"duration": 1.0,
"texture": ExtResource("7_572na")
}],
"loop": true,
"name": &"dialog",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_gyec7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossExplosionShader:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_144ah"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossExplosionShader:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ylbti"]
_data = {
&"RESET": SubResource("Animation_gyec7"),
&"new_animation": SubResource("Animation_144ah")
}

[node name="BossExplosionShader_Ghost" type="Node2D"]
script = ExtResource("1_v8o1f")

[node name="LightBossGhost" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2.00003)
scale = Vector2(1, 4.85714)
sprite_frames = SubResource("SpriteFrames_1ad4j")
frame_progress = 0.898415
offset = Vector2(-15, 196)

[node name="LightBossGhost6" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2.00003)
rotation = 2.47488
scale = Vector2(1, 4.27199)
sprite_frames = SubResource("SpriteFrames_1ad4j")
frame = 1
offset = Vector2(-15, 196)

[node name="LightBossGhost7" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2.00003)
rotation = -5.61298
scale = Vector2(1, 4.91941)
sprite_frames = SubResource("SpriteFrames_1ad4j")
frame = 1
offset = Vector2(-15, 196)

[node name="LightBossGhost8" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2.00003)
rotation = -4.22544
scale = Vector2(1, 4.88694)
sprite_frames = SubResource("SpriteFrames_1ad4j")
frame = 1
offset = Vector2(-15, 196)

[node name="LightBossGhost5" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2.00003)
rotation = -0.975639
scale = Vector2(1, 5.74817)
sprite_frames = SubResource("SpriteFrames_1ad4j")
offset = Vector2(-15, 196)

[node name="LightBossGhost2" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2.00003)
rotation = 1.34216
scale = Vector2(1, 5.94942)
sprite_frames = SubResource("SpriteFrames_1ad4j")
frame_progress = 0.28543
offset = Vector2(-15, 196)

[node name="LightBossGhost3" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2.00003)
rotation = -1.83085
scale = Vector2(1, 6.21468)
sprite_frames = SubResource("SpriteFrames_1ad4j")
frame_progress = 0.597911
offset = Vector2(-15, 196)

[node name="LightBossGhost9" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2.00003)
rotation = -2.51153
scale = Vector2(1, 6.21468)
sprite_frames = SubResource("SpriteFrames_1ad4j")
frame_progress = 0.597911
offset = Vector2(-15, 196)

[node name="LightBossGhost4" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 2.00003)
rotation = -3.58665
scale = Vector2(1, 5.67229)
sprite_frames = SubResource("SpriteFrames_1ad4j")
frame_progress = 0.572504
offset = Vector2(-15, 196)

[node name="BossExplosionShader" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_hkrjh")
sprite_frames = SubResource("SpriteFrames_ir3tq")
animation = &"dialog"
autoplay = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ylbti")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="back2" type="ColorRect" parent="."]
visible = false
z_index = 4096
offset_left = -273.0
offset_top = -120.0
offset_right = 277.0
offset_bottom = -41.0

[node name="back" type="ColorRect" parent="."]
visible = false
z_index = 4096
offset_left = -272.0
offset_top = -119.0
offset_right = 276.0
offset_bottom = -42.0
color = Color(0, 0, 0, 1)

[node name="lbl_item" type="Label" parent="back"]
layout_mode = 0
offset_left = 5.0
offset_top = 2.0
offset_right = 544.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("6_b1bnx")
text = "?????????"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
